# VolatilityHunter

./: .gitignore  .windsurfrules  AUTO_CLOSE_GUIDE.md  CLEANUP_RESULTS.md  COMPREHENSIVE_TEST_RESULTS.md  DEVELOPER_REPORT.md  PYTHON_UPDATE_SUMMARY.md  PYTHON_UPGRADE_SUMMARY.md  README.md  SCHEDULER_GUIDE.md  STATE_OF_PROJECT.md  TASK_SCHEDULER_GUIDE.md  WINDOWS_SCHEDULER_SETUP.md  analyze_portfolio.py  audit_report_20260206_201258.txt  audit_results_20260206_201258.json  audit_results_20260206_201407.json  audit_scheduler.py  config.json  daily_scan.bat  fix_task_final.py  lightning_tests.py  main.py  manual_task_setup.md  mock_data_generator.py  nuke_corruption.py  performance_tracker.py  pyproject.toml  quick_test_runner.py  quick_tests.py  requirements.txt  run.bat  run.ps1  run_neural_venv.bat  run_volatilityhunter.bat  scheduler.py  scheduler_updated.py  setup_scheduler.ps1  setup_task_scheduler.ps1  task_scheduler_job.py  (+9 more)
src/: backtest_engine.py  config.py  config_manager.py  data_loader.py  data_loader_factory.py  email_notifier.py  log_collector.py  log_sanitizer.py  notifications.py  smart_data_loader_factory.py  storage.py  strategy.py  system_monitor.py  ticker_manager.py  tracker.py  trade_verifier.py  yfinance_loader.py
