# Python 3.11+ required for modern features
# Recommended: Python 3.12+ for best performance
python_requires=">=3.11"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volatility-hunter"
version = "1.0.0"
description = "Automated Trading Signal Scanner"
authors = [{name = "VolatilityHunter Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "google-cloud-storage>=2.18.0",
    "yfinance>=0.2.44",
    "schedule>=1.2.0",
    "aiohttp>=3.11.0",
    "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/volatility-hunter"
Repository = "https://github.com/yourusername/volatility-hunter"
Issues = "https://github.com/yourusername/volatility-hunter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
